Harden TaxonWithSpecies and fix TaxonTreeService logging docs.
Make tree node collections immutable and add equals/hashCode; pass raw arguments to traceEntry and clarify Javadoc for speciesById.